# workmatch

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: auth.py  enterprises.py  follow_ups.py  person_projects.py  persons.py  projects.py  reminders.py  router.py  statistics.py
backend/app/core/: constants.py  error_handler.py  exceptions.py  rate_limit.py
backend/app/models/: __init__.py  base.py  enterprise.py  enums.py  follow_up.py  person.py  person_project.py  project.py  reminder.py  status_history.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  enterprise.py  follow_up.py  person.py  person_project.py  project.py  reminder.py  statistics.py
backend/app/services/: __init__.py  auth.py  base.py  enterprise.py  excel_export.py  excel_import.py  follow_up.py  person.py  person_project.py  project.py  reminder.py  statistics.py
backend/app/utils/: __init__.py  deps.py  permissions.py  security.py
backend/tests/: conftest.py  test_auth.py  test_models.py
backend/tests/integration/: conftest.py  test_api.py  test_person_project_api.py
backend/tests/unit/: test_enterprise_service.py  test_follow_up_service.py  test_person_project_service.py  test_person_service.py  test_project_service.py  test_reminder_service.py  test_statistics_service.py
docs/: 系统需求设计文档.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  router.tsx
frontend/src/api/: client.ts
(+33 files in other folders)
